# ChangeLog for sys-apps/less
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.83 2007/12/30 03:34:57 rich0 Exp $

  30 Dec 2007; Richard Freeman <rich0@gentoo.org> less-416.ebuild:
  amd64 stable

  28 Dec 2007; Raúl Porcel <armin76@gentoo.org> less-416.ebuild:
  alpha/ia64/sparc/x86 stable

*less-416 (28 Nov 2007)

  28 Nov 2007; Mike Frysinger <vapier@gentoo.org> +less-416.ebuild:
  Version bump.

  26 Nov 2007; Brent Baude <ranger@gentoo.org> less-409.ebuild:
  Marking less-409 ppc for bug 200348

  26 Nov 2007; Christoph Mende <angelos@gentoo.org> less-409.ebuild:
  Stable on amd64 wrt bug #200348

  26 Nov 2007; Jeroen Roovers <jer@gentoo.org> less-409.ebuild:
  Stable for HPPA (bug #200348).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org> less-409.ebuild:
  Stable on ppc64; bug #200348

  17 Nov 2007; Raúl Porcel <armin76@gentoo.org> less-409.ebuild:
  alpha/ia64/sparc/x86 stable

*less-415 (16 Nov 2007)

  16 Nov 2007; Mike Frysinger <vapier@gentoo.org> +less-415.ebuild:
  Version bump.

*less-409 (12 Oct 2007)

  12 Oct 2007; Mike Frysinger <vapier@gentoo.org> +less-409.ebuild:
  Version bump.

*less-408 (06 Oct 2007)

  06 Oct 2007; Mike Frysinger <vapier@gentoo.org> +less-408.ebuild:
  Version bump.

  28 Sep 2007; Jeroen Roovers <jer@gentoo.org> less-406.ebuild:
  Stable for HPPA (bug #194012).

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org> less-406.ebuild:
  Stable on mips, per #194012.

  01 Sep 2007; Christoph Mende <angelos@gentoo.org> less-406.ebuild:
  Stable on amd64

  25 Aug 2007; Mike Frysinger <vapier@gentoo.org> files/lesspipe.sh:
  Disable colorization by default #188835.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> less-406.ebuild:
  ppc. stable

  12 Aug 2007; Tom Gall <tgall@gentoo.org> less-406.ebuild:
  stable on ppc64

  02 Aug 2007; Christian Birchinger <joker@gentoo.org> less-406.ebuild:
  Added sparc stable keyword
