@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX README.Gentoo 823 RMD160 be59c37906fca17fa25f6781d3f5e7abc114dc57 SHA1 5a1f126af728f5220b97623050e2f9b1ea5ae58e SHA256 3985fd1810f660ea1c1f2732f719b069b6934d62d8d9e8a09287e63f049ba27d
 MD5 e8136f7422791d2806f9b2ce8337938d files/README.Gentoo 823
 RMD160 be59c37906fca17fa25f6781d3f5e7abc114dc57 files/README.Gentoo 823
@@ -20,6 +23,7 @@ DIST less-408.tar.gz 291963 RMD160 1548cb1a8bfe306264aed929ee4aaad950748945 SHA1
 DIST less-409.tar.gz 292013 RMD160 67d13fef7435a298f48f03d10bbc249642ad17ad SHA1 6c554f520b635d783e16f19bfb3d7d00176a8a2d SHA256 5cf724149ecd484a084d8c8322a6c3108cebe576d7018accf6ee7bd6f3f5142f
 DIST less-415.tar.gz 294361 RMD160 c6a910a1fbd218dd496ae47c68f98778dd4023e2 SHA1 49fb7f3c2105c98c4a7c062cddadb20f21e39ffd SHA256 9c0a421ab3da3aed0be9aba46832c7eb8337a7e7689f7729a1a93012f549079a
 DIST less-416.tar.gz 294541 RMD160 0f605bd4105aa94f62eddd0316f88c5d6a15bac6 SHA1 8f22bfb8eab70e21c7918ed0a5e61b9833c7d19e SHA256 9b46579741b089e4b148a6e19f7bfdc26afd02ccbf85105fc8314e8c3fb355db
+DIST less-418.tar.gz 299213 RMD160 a10402aa423e3d3c4d950735208991d7d4afb85d SHA1 ec4fb48680878a7ac3499c46564c47c448b0aa22 SHA256 f532fcd61b012379d3258196a8588fd9d51ecdfb5c795485ab2f78d439b103b4
 EBUILD less-406.ebuild 1201 RMD160 7ef7c6ae9cbecb32a8004728ea877cb0e520ec98 SHA1 0065a855f86f3f8d592e0370485bf227c2e03eaa SHA256 d82b8b7fe5aa69f32d27a53fe20456bf18affd2ceae9371991722a8ec31b2254
 MD5 0b77b438cb5c1d3a8bc9a73e56fd807b less-406.ebuild 1201
 RMD160 7ef7c6ae9cbecb32a8004728ea877cb0e520ec98 less-406.ebuild 1201
@@ -40,10 +44,14 @@ EBUILD less-416.ebuild 1207 RMD160 00815a32572231888d0556acd79a70c2c0c010cf SHA1
 MD5 9aed95cb85fe29be44df8723e0ef29eb less-416.ebuild 1207
 RMD160 00815a32572231888d0556acd79a70c2c0c010cf less-416.ebuild 1207
 SHA256 7a819662dd22aec9e4eac3e0df3871850c076f8c5eab7dffe5f876cc05a4839f less-416.ebuild 1207
-MISC ChangeLog 10144 RMD160 f45f391b82e663cf2908a7148b7f3dcc6a2a3e34 SHA1 3fbdcb25c9703a05a120a7d2132db8e2c5aa34c4 SHA256 bc8838ba49cea96da6f9d38bc76a99924a0facce16de1b052114fc0785f1b877
-MD5 2f312a14c14b8b0d86a271c3450875e0 ChangeLog 10144
-RMD160 f45f391b82e663cf2908a7148b7f3dcc6a2a3e34 ChangeLog 10144
-SHA256 bc8838ba49cea96da6f9d38bc76a99924a0facce16de1b052114fc0785f1b877 ChangeLog 10144
+EBUILD less-418.ebuild 1217 RMD160 b01a59104c74df82cd75bc86da1fde2c0676d8a5 SHA1 27d2a45afd5d3ff7c9acc1b7a7e2ca5c00c44bba SHA256 7db70f110f6972a17b6bd4097cb39152cf7ea0d15244f756a573ea50c6bda685
+MD5 3bfcc3e6780f3cf991982e0cb7689590 less-418.ebuild 1217
+RMD160 b01a59104c74df82cd75bc86da1fde2c0676d8a5 less-418.ebuild 1217
+SHA256 7db70f110f6972a17b6bd4097cb39152cf7ea0d15244f756a573ea50c6bda685 less-418.ebuild 1217
+MISC ChangeLog 10255 RMD160 db180ee98d9521ae3698809896d40cecfaf0f0fa SHA1 5e327a7ec48d512227627dc75183cabd33a6692e SHA256 3b8ed24dd7cc9bd7d3aebdea2748137446a17ee8d88adb78389ec619354c4893
+MD5 7e1b8d4638197a5a0f8dc022f189be9b ChangeLog 10255
+RMD160 db180ee98d9521ae3698809896d40cecfaf0f0fa ChangeLog 10255
+SHA256 3b8ed24dd7cc9bd7d3aebdea2748137446a17ee8d88adb78389ec619354c4893 ChangeLog 10255
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -63,3 +71,13 @@ SHA256 e87e01b94c3ae30b47d069640d146eabd9cb64923ece7c24efc36847119e7584 files/di
 MD5 f8c2b15075b54859cc6f194473cc77b1 files/digest-less-416 437
 RMD160 9bfa0b1ed479d5f929afba9cfc631d3bb3b4940e files/digest-less-416 437
 SHA256 9944a265e99704e7f04f6679fe8ee8ee0294cd3628ccac43732d76f3902d909f files/digest-less-416 437
+MD5 f076768f3bfd6cae251f857a02c703c8 files/digest-less-418 437
+RMD160 4b2aa30de3cd74105baeb77a7a3b1f107b7272eb files/digest-less-418 437
+SHA256 56dda8e67e06e13ce51cf1e1a61f2152622a56d34cb800e21da261777ace6bba files/digest-less-418 437
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.8 (GNU/Linux)
+
+iEYEARECAAYFAkd9KL8ACgkQj9hvisErhMKFRACgg5RWNY2h+YA0vzF7tKmyvyaV
+fI8AoNgaY19kRpWFjDEs7Ig9yhTITQ8T
+=4YjX
+-----END PGP SIGNATURE-----
