@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/less
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.83 2007/12/30 03:34:57 rich0 Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.84 2008/01/03 18:26:01 vapier Exp $
+
+*less-418 (03 Jan 2008)
+
+  03 Jan 2008; Mike Frysinger <vapier@gentoo.org> +less-418.ebuild:
+  Version bump.
 
   30 Dec 2007; Richard Freeman <rich0@gentoo.org> less-416.ebuild:
   amd64 stable
